# django-voting-app

./: .coveragerc  .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt  updater.sh
.github/workflows/: django.yml
docker/: docker-entrypoint.sh  local_settings.template.py
docs/: administration.rst  conf.py  configuration.rst  creating_votes.rst  index.rst  installation.rst  installation_configuration.rst  installation_installation.rst  installation_migration.rst  installation_prerequisites.rst  site_administration.rst  utilisation.rst  vote_administration.rst  voting_process_and_results.rst
docs/locale/fr/LC_MESSAGES/: administration.po  index.po  installation.po  installation_configuration.po  installation_installation.po  installation_migration.po  installation_prerequisites.po  site_administration.po  utilisation.po  vote_administration.po
src/: dev-requirements.txt  manage.py
src/core/: admin.py  apps.py  models.py  tests.py  translation.py  urls.py  utils.py  views.py
src/core/migrations/: 0001_initial.py  0002_auto_20201204_1828.py  0003_auto_20201204_1919.py  0004_vote_see_voters.py  0005_vote_public_results.py
src/core/templates/: base.html  checks.html  footer.html  home.html  legals.html  login.html  nav.html  new_vote.html  results.html  results_detail.html  vote.html  votes_index.html
src/core/templatetags/: core_extras.py
src/django_voting_app/: __init__.py  asgi.py  local_settings.example.py  processors.py  settings.py  urls.py  wsgi.py
(+2 files in other folders)
