[tool.poetry]
name = "django-voting-app"
version = "1.4.0"
description = "Small django utility to organize votes"
authors = ["Yoann Piétri <me@nanoy.fr>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "django_voting_app"}]

[tool.poetry.dependencies]
python = ">=3.8,<4"
django = "~4"
django-bootstrap4 = "^22.3"
django-modeltranslation = "^0.18.7"
requests = "^2.28.1"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
rope = "^1.6.0"
pylint = "^2.15.9"
pylint-django = "^2.5.3"
coveralls = "^3.3.1"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
docstr-coverage = "^2.2.0"
pyyaml = "^6.0"
sphinx-intl = "^2.0.1"
auto-changelog = "^0.6.0"
coverage = "<5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
